--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -55,6 +55,6 @@
       </section>
     </main>
     <footer>By Ana Moros</footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
