--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,6 @@
       </section>
     </main>
     <footer>By Ana Moros</footer>
-    <script src="./script.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
