--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,12 @@
           <p class="buy-labels">Total:</p>
           <p class="buy-text" id="total"></p>
           <div class="btns-container">
-            <input type="button" class="btn-cancel" value="Cancel" />
-            <input type="submit" class="btn-buy" value="Add" />
+            <input
+              type="button"
+              class="btn btn-pop-up btn-cancel"
+              value="Cancel"
+            />
+            <input type="submit" class="btn btn-pop-up btn-buy" value="Add" />
           </div>
         </form>
       </section>
