changed to css and classes

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>The Kanto Fights</h1>
-      <button id="btn-cart" class="btn-cart">
-        Cart<span id="cart-num" class="cart-num"></span>
+    <header class="main-container">
+      <button id="btn-cart" class="btn btn-cart">
+        Cart<span id="cart-num"></span>
       </button>
+      <h1 class="header-hero">The Kanto Fights</h1>
       <!-- <nav id="filter-container">
         <input
           type="text"
@@ -31,8 +31,8 @@
         />
       </nav> -->
     </header>
-    <main>
-      <section class="cards-container" id="cards-container"></section>
+    <main class="main-contianer">
+      <section class="events-container" id="events-container"></section>
       <section class="buy-container hidden" id="buy-container">
         <p class="buy-labels">Event:</p>
         <p class="buy-text" id="eventName"></p>
